[package]
name = "maplestory-calculator"
version = "0.1.0"
authors = ["Jimmy Ye <jiy162@ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
indexmap = "1.6.1"
noisy_float = "0.1.13"
