[package]
name = "maplestory-calculator"
version = "0.1.0"
authors = ["Jimmy Ye <jiy162@ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[profile.fast]
inherits = "release"
debug = true
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
indexmap = "1.6.1"
noisy_float = { version = "0.1.13", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
format_num = "0.1.0"
rusqlite = { version = "0.24.2", features = ["backup", "bundled"] }
serde_rusqlite = "0.26.0"
ndarray = "0.15.4"
ndrustfft = "0.2.1"